after first run of training

--- a/Ex3/Ex3.ipynb
+++ b/Ex3/Ex3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "['test/Brachyura', 'test/Bivalvia__Mollusca', 'test/Annelida']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,19 +105,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = load_model(\"Base_model.model\")\n",
+    "image_vectors = t.get_vectors(model, tdir = \"validate/\")\n",
+    "#model = model.load_weights(\"models/epoch_1.h5\")\n",
+    "#model.predict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'summary'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-5f15418b3570>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'summary'"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'predict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-1ad93d83cac8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mm\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# Switch to load weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mimage_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtdir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimdir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0;31m# Begin fn for dict to array convert\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mvecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/INF368/Ex3/plankton_siamese/testing.py\u001b[0m in \u001b[0;36mget_vectors\u001b[0;34m(model, tdir)\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m            \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtdir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m            \u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mclass_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtdir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/INF368/Ex3/plankton_siamese/testing.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m            \u001b[0mimages\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtdir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 34\u001b[0;31m            \u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mclass_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtdir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     35\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mres\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/INF368/Ex3/plankton_siamese/testing.py\u001b[0m in \u001b[0;36mclass_file\u001b[0;34m(model, fname)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mclass_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mimg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mImage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m256\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand_dims\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpaste\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mdist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'predict'"
+     ]
+    }
+   ],
+   "source": [
+    "#model = load_model(\"Base_model.model\")\n",
     "models = glob.glob('models/*')\n",
     "vec_hist = []\n",
+    "imdir = \"validate/\"\n",
     "for m in models:\n",
     "    model = load_model(m) # Switch to load weights\n",
     "    image_vectors = t.get_vectors(model, tdir = imdir)\n",
     "    # Begin fn for dict to array convert\n",
     "    vecs = np.zeros((1,64))\n",
     "    y_truth = []\n",
-    "    con_dict = {}\n",
+    "    conv_dict = {}\n",
     "    keys = list(image_vectors.keys())\n",
     "    for i in range(len(keys)):\n",
     "        conv_dict[keys[i]] = i\n",
@@ -1291,7 +1341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,12 +1370,12 @@
     "            shuffle(files)\n",
     "            if i == \"train\":\n",
     "                for f in files:\n",
-    "                    #print(\"\")\n",
+    "                    #print(\"moving train files: \",c)\n",
     "                    shutil.move(f, path + i + \"/\" + c + re.search(\"/\"+c+\"(.*)\", f).group(1) )\n",
     "                    # end for files\n",
     "            else:\n",
-    "                for f in files[0:10]:\n",
-    "                    #print(f,\"___\", path + i + \"/\" + c + re.search(\"/\"+c+\"(.*)\", f).group(1))\n",
+    "                for f in files[0:90]:\n",
+    "                    #print(\"moving test/val files: \",c)\n",
     "                    shutil.move(f, path + i + \"/\" + c + re.search(\"/\"+c+\"(.*)\", f).group(1) )\n",
     "                    #end for files\n",
     "    print(\"Removing Old class folders\")\n",
@@ -1338,11 +1388,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of classes:  40\n",
+      "Creating  test -set\n",
+      "Moving files:  Brachyura\n",
+      "Moving files:  tail__Chaetognatha\n",
+      "Moving files:  Eucalanidae\n",
+      "Moving files:  nauplii__Crustacea\n",
+      "Moving files:  Cavoliniidae\n",
+      "Moving files:  egg__other\n",
+      "Moving files:  multiple__Copepoda\n",
+      "Moving files:  Bivalvia__Mollusca\n",
+      "Moving files:  Phaeodaria\n",
+      "Moving files:  Ostracoda\n",
+      "Moving files:  Penilia\n",
+      "Moving files:  Limacinidae\n",
+      "Moving files:  Oikopleuridae\n",
+      "Moving files:  nectophore__Diphyidae\n",
+      "Moving files:  Corycaeidae\n",
+      "Moving files:  Temoridae\n",
+      "Moving files:  egg__Actinopterygii\n",
+      "Moving files:  Foraminifera\n",
+      "Moving files:  Annelida\n",
+      "Moving files:  eudoxie__Diphyidae\n",
+      "Moving files:  Oncaeidae\n",
+      "Moving files:  Noctiluca\n",
+      "Moving files:  Doliolida\n",
+      "Moving files:  Decapoda\n",
+      "Moving files:  nauplii__Cirripedia\n",
+      "Moving files:  tail__Appendicularia\n",
+      "Moving files:  Haloptilus\n",
+      "Moving files:  Candaciidae\n",
+      "Moving files:  cyphonaute\n",
+      "Moving files:  Euchaetidae\n",
+      "Moving files:  multiple__other\n",
+      "Moving files:  Harpacticoida\n",
+      "Moving files:  Evadne\n",
+      "Moving files:  Coscinodiscus\n",
+      "Moving files:  Centropagidae\n",
+      "Moving files:  zoea__Decapoda\n",
+      "Moving files:  Salpida\n",
+      "Moving files:  gonophore__Diphyidae\n",
+      "Moving files:  calyptopsis\n",
+      "Moving files:  Fritillariidae\n",
+      "Creating  validate -set\n",
+      "Moving files:  Brachyura\n",
+      "Moving files:  tail__Chaetognatha\n",
+      "Moving files:  Eucalanidae\n",
+      "Moving files:  nauplii__Crustacea\n",
+      "Moving files:  Cavoliniidae\n",
+      "Moving files:  egg__other\n",
+      "Moving files:  multiple__Copepoda\n",
+      "Moving files:  Bivalvia__Mollusca\n",
+      "Moving files:  Phaeodaria\n",
+      "Moving files:  Ostracoda\n",
+      "Moving files:  Penilia\n",
+      "Moving files:  Limacinidae\n",
+      "Moving files:  Oikopleuridae\n",
+      "Moving files:  nectophore__Diphyidae\n",
+      "Moving files:  Corycaeidae\n",
+      "Moving files:  Temoridae\n",
+      "Moving files:  egg__Actinopterygii\n",
+      "Moving files:  Foraminifera\n",
+      "Moving files:  Annelida\n",
+      "Moving files:  eudoxie__Diphyidae\n",
+      "Moving files:  Oncaeidae\n",
+      "Moving files:  Noctiluca\n",
+      "Moving files:  Doliolida\n",
+      "Moving files:  Decapoda\n",
+      "Moving files:  nauplii__Cirripedia\n",
+      "Moving files:  tail__Appendicularia\n",
+      "Moving files:  Haloptilus\n",
+      "Moving files:  Candaciidae\n",
+      "Moving files:  cyphonaute\n",
+      "Moving files:  Euchaetidae\n",
+      "Moving files:  multiple__other\n",
+      "Moving files:  Harpacticoida\n",
+      "Moving files:  Evadne\n",
+      "Moving files:  Coscinodiscus\n",
+      "Moving files:  Centropagidae\n",
+      "Moving files:  zoea__Decapoda\n",
+      "Moving files:  Salpida\n",
+      "Moving files:  gonophore__Diphyidae\n",
+      "Moving files:  calyptopsis\n",
+      "Moving files:  Fritillariidae\n",
+      "Creating  train -set\n",
+      "Moving files:  Brachyura\n",
+      "Moving files:  tail__Chaetognatha\n",
+      "Moving files:  Eucalanidae\n",
+      "Moving files:  nauplii__Crustacea\n",
+      "Moving files:  Cavoliniidae\n",
+      "Moving files:  egg__other\n",
+      "Moving files:  multiple__Copepoda\n",
+      "Moving files:  Bivalvia__Mollusca\n",
+      "Moving files:  Phaeodaria\n",
+      "Moving files:  Ostracoda\n",
+      "Moving files:  Penilia\n",
+      "Moving files:  Limacinidae\n",
+      "Moving files:  Oikopleuridae\n",
+      "Moving files:  nectophore__Diphyidae\n",
+      "Moving files:  Corycaeidae\n",
+      "Moving files:  Temoridae\n",
+      "Moving files:  egg__Actinopterygii\n",
+      "Moving files:  Foraminifera\n",
+      "Moving files:  Annelida\n",
+      "Moving files:  eudoxie__Diphyidae\n",
+      "Moving files:  Oncaeidae\n",
+      "Moving files:  Noctiluca\n",
+      "Moving files:  Doliolida\n",
+      "Moving files:  Decapoda\n",
+      "Moving files:  nauplii__Cirripedia\n",
+      "Moving files:  tail__Appendicularia\n",
+      "Moving files:  Haloptilus\n",
+      "Moving files:  Candaciidae\n",
+      "Moving files:  cyphonaute\n",
+      "Moving files:  Euchaetidae\n",
+      "Moving files:  multiple__other\n",
+      "Moving files:  Harpacticoida\n",
+      "Moving files:  Evadne\n",
+      "Moving files:  Coscinodiscus\n",
+      "Moving files:  Centropagidae\n",
+      "Moving files:  zoea__Decapoda\n",
+      "Moving files:  Salpida\n",
+      "Moving files:  gonophore__Diphyidae\n",
+      "Moving files:  calyptopsis\n",
+      "Moving files:  Fritillariidae\n",
+      "Removing Old class folders\n"
+     ]
+    }
+   ],
    "source": [
-    "classes = fetch_data_set(\"plankton_siamese/data/Euc/\")"
+    "classes = move_and_split_data_set(\"data/\")"
    ]
   },
   {
@@ -1370,10 +1552,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/florianmuthreich/INF368/Ex3/plankton_siamese'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
   }
  ],
  "metadata": {
